Nodify, add Typings and bundle

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -22,8 +22,8 @@
   <!-- include source files here... -->
 
   <!-- include spec files here... -->
-  <script src="../../JSON-Patch-queue/src/json-patch-queue.js"></script>
-  <script src="../src/json-patch-ot-agent.js"></script>
+  <script src="https://rawgit.com/Palindrom/JSON-Patch-Queue/master/src/json-patch-queue.js"></script>
+  <script src="../dist/json-patch-ot-agent.min.js"></script>
   <script src="spec/asyncVersioningSpec.js"></script>
   <script src="spec/OTAgentSpec.js"></script>
 
