--- a/test/SpecRunnerMinified.html
+++ b/test/SpecRunnerMinified.html
@@ -22,8 +22,9 @@
   <!-- include source files here... -->
 
   <!-- include spec files here... -->
-  <script src="https://rawgit.com/Palindrom/JSON-Patch-Queue/master/src/json-patch-queue.js"></script>
-  <script src="../src/json-patch-ot-agent.js"></script>
+  <!-- needless here <script src="https://rawgit.com/Palindrom/JSON-Patch-Queue/master/src/json-patch-queue.js"></script> -->
+  
+  <script src="../dist/json-patch-ot-agent.bundle.js"></script>
   <script src="spec/asyncVersioningSpec.js"></script>
   <script src="spec/OTAgentSpec.js"></script>
 
