Localize tests, fix comment, add NPM to readme

--- a/test/SpecRunnerMinified.html
+++ b/test/SpecRunnerMinified.html
@@ -24,7 +24,7 @@
   <!-- include spec files here... -->
   <!-- needless here <script src="https://rawgit.com/Palindrom/JSON-Patch-Queue/master/src/json-patch-queue.js"></script> -->
   
-  <script src="../dist/json-patch-ot-agent.bundle.js"></script>
+  <script src="../dist/json-patch-ot-agent.bundle.min.js"></script>
   <script src="spec/asyncVersioningSpec.js"></script>
   <script src="spec/OTAgentSpec.js"></script>
 
